--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Browser based game",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel src -d dist"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,8 @@
   "homepage": "https://github.com/SmolenskiyAV/ajs-22_1.defender-game#readme",
   "devDependencies": {
     "http-server": "^14.1.0"
+  },
+  "dependencies": {
+    "core-js": "^3.20.2"
   }
 }
