--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
     "@babel/cli": "^7.16.8",
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.8",
+    "add": "^2.0.6",
+    "babel-eslint": "^10.1.0",
     "eslint": "^8.7.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-react": "^7.28.0",
-    "http-server": "^14.1.0"
+    "http-server": "^14.1.0",
+    "typescript": "^4.5.5",
+    "yarn": "^1.22.17"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.10.0",
